--- a/use with live server/tictactoe.htm
+++ b/use with live server/tictactoe.htm
@@ -7,7 +7,7 @@
     <meta name="author" content="aiden li">
     <meta name="description" content="aidens games">
     <meta name="keywords" content="games minigames aiden fun">
-    <link rel="icon" type="image/png" href="/images/controllerfavicon.png">
+    <link rel="icon" type="image/png" href="images/controllerfavicon.png">
     <title>Tic-Tac-Toe - CMG</title>
 </head>
 <body>
@@ -66,6 +66,6 @@
     <footer>
         <p>I don't really have anything to put here, and this is supposed to be a footer, but here you go :)</p>
     </footer>
-    <script src="/javascript/tictactoe.js"></script>
+    <script src="javascript/tictactoe.js"></script>
 </body>
 </html>
